src/objects/JE_Job_Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Level_of_Key_Account_Contact__c</fullName>
        <label>Level of Key Account Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher than VP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_in_Leadership_Teams__c</fullName>
        <label>Membership in Leadership Teams</label>
        <picklist>
            <picklistValues>
                <fullName>Member in 0 to 1 Leadership Team	Member in 1-2 Leadership Teams	Member in More than 2 Leadership Teams</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Brands_Comments__c</fullName>
        <label>No. of Brands Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Brands_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.No_of_Brands_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Brands Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Brands_Score__c</fullName>
        <formula>CASE( RecordTypeId , &quot;012E0000000654M&quot;,CASE( No_of_Brands__c , &quot;Usually 1 brand&quot;, 1, &quot;1-3 brands&quot;, 2, &quot;3-5 brands&quot;, 3, &quot;5-15 brands&quot;,4, &quot;15 &amp; Above&quot;,5,0),
CASE( RecordTypeId , &quot;012E0000000654N&quot;,CASE( No_of_Brands__c , &quot;Single brand&quot;, 1, &quot;Multiple brands and variants&quot;, 2,0) ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Brands Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Brands_Weighted_Score__c</fullName>
        <formula>No_of_Brands_Score__c  *   No_of_Brands_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Brands Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Brands__c</fullName>
        <label>No. of Brands</label>
        <picklist>
            <picklistValues>
                <fullName>Usually 1 brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-15 brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 &amp; Above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple brands and variants</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Direct_Reports_Comments__c</fullName>
        <label>No. of Direct Reports Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Direct_Reports_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Number_of_Direct_Reports_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Direct Reports Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Direct_Reports_Workflow__c</fullName>
        <label>No. of Direct Reports Workflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Employees_Managed_Comments__c</fullName>
        <label>No. of Employees Managed Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Employees_Managed_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.No_of_Employees_Managed_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Employees Managed Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Employees_Managed_Score__c</fullName>
        <formula>CASE( RecordTypeId , &quot;012E0000000654O&quot;,CASE( No_of_Employees_Managed__c , &quot;0-5&quot;, 1, &quot;6-8&quot;, 2, &quot;9-12&quot;,3, &quot;13-20&quot;,4, &quot;More than 20&quot;,5,0),
CASE( RecordTypeId , &quot;012E0000000654R&quot;,CASE( No_of_Employees_Managed__c , &quot;0-400&quot;, 1, &quot;401-700&quot;, 2, &quot;700 - 1,000&quot;,3, &quot;1,100 - 3,000&quot;,4, &quot;Above 3,000&quot;,5,0),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Employees Managed Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Employees_Managed_Weighted_Score__c</fullName>
        <formula>No_of_Employees_Managed_Score__c * No_of_Employees_Managed_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Employees Managed Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Employees_Managed__c</fullName>
        <label>No. of Employees Managed</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401-700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700 - 1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,100 - 3,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 3,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Factories_Production_Lines_Comm__c</fullName>
        <label>No. of Factories &amp; Production Lines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Factories_Production_Lines_Mult__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.No_of_Factories_Production_Lines_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Factories &amp; Production Lines Mult</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Factories_Production_Lines_Scor__c</fullName>
        <formula>CASE( No_of_Factories_Production_Lines__c , &quot;1&quot;, 1, &quot;2-4&quot;, 2, &quot;5-10&quot;,4, &quot;Above 10&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Factories &amp; Production Lines Scor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Factories_Production_Lines_W_Sc__c</fullName>
        <formula>No_of_Factories_Production_Lines_Scor__c * No_of_Factories_Production_Lines_Mult__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Factories &amp; Production Lines W Sc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Factories_Production_Lines__c</fullName>
        <label>No. of Factories &amp; Production Lines</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Innovations_Per_Year_Comments__c</fullName>
        <label>No. of Innovations Per Year Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Innovations_Per_Year_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.No_of_Innovations_Per_Year_Multipliers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Innovations Per Year Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Innovations_Per_Year_Score__c</fullName>
        <formula>CASE( No_of_Innovations_Per_Year__c , &quot;0-2&quot;, 1, &quot;3-5&quot;, 2, &quot;6-10&quot;,3, &quot;11-15&quot;,4, &quot;16-20&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Innovations Per Year Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Innovations_Per_Year_Weight_Score__c</fullName>
        <formula>No_of_Innovations_Per_Year_Score__c * No_of_Innovations_Per_Year_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Innovations Per Year Weight Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Innovations_Per_Year__c</fullName>
        <label>No. of Innovations Per Year</label>
        <picklist>
            <picklistValues>
                <fullName>0-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Key_Accounts_Modern_Trade_Comme__c</fullName>
        <label>No. of Key Accounts (Modern Trade)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Key_Accounts_Modern_Trade_Multi__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.No_of_Key_Accounts_Modern_Trade_Multi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Key Accounts (Modern Trade) Multi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Key_Accounts_Modern_Trade_Score__c</fullName>
        <formula>CASE( No_of_Key_Accounts_Modern_Trade__c , &quot;1&quot;, 1, &quot;2-5&quot;, 2, &quot;6-10&quot;,4, &quot;More than 10&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Key Accounts (Modern Trade) Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Key_Accounts_Modern_Trade_We_Sc__c</fullName>
        <formula>No_of_Key_Accounts_Modern_Trade_Score__c * No_of_Key_Accounts_Modern_Trade_Multi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Key Accounts (Modern Trade) We Sc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Key_Accounts_Modern_Trade__c</fullName>
        <label>No. of Key Accounts (Modern Trade)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Platform_Product_Lines_Comments__c</fullName>
        <label>No. of Platform/Product Lines Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Platform_Product_Lines_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.No_of_Platform_Product_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Platform/Product Lines Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Platform_Product_Lines_Score__c</fullName>
        <formula>CASE( No_of_Platform_Product_Lines__c , &quot;1 Platform (e.g. Conditioner)&quot;, 1, &quot;Combined Platform (eg. Conditioner &amp; Shampoo)&quot;,3,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Platform/Product Lines Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Platform_Product_Lines_Wei_Score__c</fullName>
        <formula>No_of_Platform_Product_Lines_Score__c  *  No_of_Platform_Product_Lines_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Platform/Product Lines Wei Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Platform_Product_Lines__c</fullName>
        <label>No. of Platform/Product Lines</label>
        <picklist>
            <picklistValues>
                <fullName>1 Platform (e.g. Conditioner)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined Platform (eg. Conditioner &amp; Shampoo)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Project_Activation_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.No_of_Project_Activation_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Project Activation Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Project_Activations_Score__c</fullName>
        <formula>CASE( Number_of__c , &quot;0-1&quot;, 1, &quot;2-5&quot;, 2, &quot;6-10&quot;, 4, &quot;More than 10&quot;, 5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Project Activations Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Project_Activations_Weight_Score__c</fullName>
        <formula>No_of_Project_Activations_Score__c  *   No_of_Project_Activation_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Project Activations Weight Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Project_Activations_Yr1_Comments__c</fullName>
        <label>No. of Project Activations Yr1 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_WL1_Supported_Comments__c</fullName>
        <label>No. of WL1 Supported Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_WL1_Supported_Multiper__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.No_of_WL1_Supported_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of WL1 Supported Multiper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_WL1_Supported_Score__c</fullName>
        <formula>CASE( No_of_WL1_Supported__c , &quot;200 to 500&quot;,1, &quot;501 to 800&quot;, 2, &quot;801 to 2000&quot;,3, &quot;2001-5000&quot;,4, &quot;More than 5000&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of WL1 Supported Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_WL1_Supported_Weighted_Score__c</fullName>
        <formula>No_of_WL1_Supported_Score__c * No_of_WL1_Supported_Multiper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of WL1 Supported Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_WL1_Supported__c</fullName>
        <label>No. of WL1 Supported</label>
        <picklist>
            <picklistValues>
                <fullName>200 to 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501 to 800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>801 to 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001-5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_WL2_Supported_Comments__c</fullName>
        <label>No. of WL2+ Supported Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_WL2_Supported_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.No_of_WL2_Supported_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of WL2+ Supported Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_WL2_Supported_Score__c</fullName>
        <formula>CASE( No_of_WL2_Supported__c , &quot;20 to 50&quot;, 1, &quot;51 to 100&quot;, 2, &quot;101 to 250&quot;,3, &quot;250 to 500&quot;,4, &quot;More than 500&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of WL2+ Supported Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_WL2_Supported_Weighted_Score__c</fullName>
        <formula>No_of_WL2_Supported_Score__c * No_of_WL2_Supported_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of WL2+ Supported Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_WL2_Supported__c</fullName>
        <label>No. of WL2+ Supported</label>
        <picklist>
            <picklistValues>
                <fullName>20 to 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51 to 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101 to 250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 to 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 500</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Direct_Reports_Score__c</fullName>
        <formula>CASE( RecordTypeId , &quot;012E0000000654M&quot;,CASE(Number_of_Direct_Reports__c , &quot;0-1&quot;, 1, &quot;1-2&quot;, 2, &quot;2-3&quot;, 4, &quot;More Than 3&quot;, 5,0),

CASE( RecordTypeId , &quot;012E0000000654N&quot;,CASE(Number_of_Direct_Reports__c , &quot;0-1 (WL1)&quot;, 1, &quot;2-3 (WL1)&quot;, 2, &quot;1-2 (WL2)&quot;, 4, &quot;More Than 3&quot;, 5,0),

CASE( RecordTypeId , &quot;012E0000000654O&quot;,CASE(Number_of_Direct_Reports__c , &quot;0-3 (WL1))&quot;, 1, &quot;3-5 (WL1)&quot;, 2, &quot;3-5 (Including 2A)&quot;, 3, &quot;6-8&quot;, 4, &quot;More than 8&quot;,5,0),

CASE( RecordTypeId , &quot;012E0000000654P&quot;,CASE(Number_of_Direct_Reports__c , &quot;0-2 (WL1)&quot;, 1, &quot;3-5 (WL1)&quot;, 2, &quot;6-8&quot;, 3, &quot;8-10&quot;, 4, &quot;More than 10&quot;,5,0),

CASE( RecordTypeId , &quot;012E0000000654Q&quot;,CASE(Number_of_Direct_Reports__c , &quot;0-2 (WL1)&quot;, 1, &quot;3-5 (WL1)&quot;, 2, &quot;6-8&quot;, 3, &quot;8-10&quot;, 4, &quot;More than 10&quot;,5,0),

CASE( RecordTypeId , &quot;012E0000000654R&quot;,CASE(Number_of_Direct_Reports__c , &quot;0-1 (WL1)&quot;, 1, &quot;1-2 (WL1)&quot;, 2, &quot;3-5&quot;, 4, &quot;More than 5&quot;,5,0),0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Direct Reports Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Direct_Reports_Weighted_Score__c</fullName>
        <formula>No_of_Direct_Reports_Workflow__c  *   No_of_Direct_Reports_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Direct Reports Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Direct_Reports__c</fullName>
        <label>Number of Direct Reports</label>
        <picklist>
            <picklistValues>
                <fullName>0-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-1 (WL1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-2 (WL1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 (WL1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 (WL2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-3 (WL1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Than 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 (WL1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 (Including 2A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 (WL1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_SKU_s_Comments__c</fullName>
        <label>Number of SKU&apos;s Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_SKU_s_Multilier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Number_of_SKU_s_Multilier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of SKU&apos;s Multilier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_SKU_s_Score__c</fullName>
        <formula>CASE( Number_of_SKU_s__c , &quot;10 - 200&quot;, 1, &quot;201 - 400&quot;, 2, &quot;401 - 800&quot;,3, &quot;800 - 1,000&quot;,4, &quot;Above 1,000&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of SKU&apos;s Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_SKU_s_Weighted_Score__c</fullName>
        <formula>Number_of_SKU_s_Score__c * Number_of_SKU_s_Multilier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of SKU&apos;s Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_SKU_s__c</fullName>
        <label>Number of SKU&apos;s</label>
        <picklist>
            <picklistValues>
                <fullName>10 - 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201 - 400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401 - 800</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>800 - 1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 1,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Skip_Level_Reports_Comments__c</fullName>
        <label>Number of Skip Level Reports Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Skip_Level_Reports_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Number_of_Skip_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Skip Level Reports Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Skip_Level_Reports_Score__c</fullName>
        <formula>CASE( Number_of_Skip_Level_Reports__c , &quot;0&quot;, 1, &quot;1-2&quot;, 2, &quot;3-6&quot;, 3, &quot;7-12&quot;, 4, &quot;More Than 12&quot;, 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Skip Level Reports Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Skip_Level_Reports_Weighted_Sc__c</fullName>
        <formula>Number_of_Skip_Level_Reports_Score__c  * Number_of_Skip_Level_Reports_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Skip Level Reports Weighted Sc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Skip_Level_Reports__c</fullName>
        <label>Number of Skip Level Reports</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Than 12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of__c</fullName>
        <label>No. of Project Activations in 1 Year</label>
        <picklist>
            <picklistValues>
                <fullName>0-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Profitability_PBI_Comments__c</fullName>
        <label>Overall Profitability (PBI) Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Profitability_PBI_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Overall_Profitability_PBI_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Profitability (PBI) Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Profitability_PBI_Score__c</fullName>
        <formula>CASE( Overall_Profitability_PBI__c , &quot;up to 10 m Euros	&quot;, 1, &quot;10 - 80 m Euros&quot;, 2,&quot;80 - 100 m Euros&quot;,3, &quot;100 - 200 m Euros&quot;,4, &quot;More than 200 m Euros&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Profitability (PBI) Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Profitability_PBI_Weight_Score__c</fullName>
        <formula>Overall_Profitability_PBI_Score__c * Overall_Profitability_PBI_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Profitability (PBI) Weight Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Profitability_PBI__c</fullName>
        <label>Overall Profitability (PBI)</label>
        <picklist>
            <picklistValues>
                <fullName>up to 10 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - 80 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80 - 100 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - 200 m Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 200 m Euros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Total_Score__c</fullName>
        <label>Overall Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pillar__c</fullName>
        <label>Pillar</label>
        <picklist>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Markets</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_Solving_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Problem_Solving_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Problem Solving Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem_Solving_Scope_Comments__c</fullName>
        <label>Problem Solving Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>